force-app/main/default/objects/Trial_Data__c/Trial_Data__c.object-meta.xml
<CustomObject>
    <description>Data and Status of Trials</description>
    <label>(E-D-009) Trial Data</label>
    <nameField>
        <displayFormat>System Trial Number {00000}</displayFormat>
        <label>Trial Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trial Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>