force-app/main/default/objects/Trial_Data__c/fields/Actual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Actual_Volume__c</fullName>
    <label>Actual Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>