force-app/main/default/objects/Trial_Data__c/fields/Address_to_which_samples_should_be_sent__c.field-meta.xml
<CustomField>
    <fullName>Address_to_which_samples_should_be_sent__c</fullName>
    <label>Address to which samples should be sent</label>
    <type>TextArea</type>
</CustomField>