force-app/main/default/objects/Trial_Data__c/fields/Annual_Volume_000_s__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume_000_s__c</fullName>
    <label>Annual Volume (000&apos;s)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>