force-app/main/default/objects/Trial_Data__c/fields/Approval_to_order_Production_Tooling__c.field-meta.xml
<CustomField>
    <fullName>Approval_to_order_Production_Tooling__c</fullName>
    <label>Approval to order Production Tooling</label>
    <type>Date</type>
</CustomField>