force-app/main/default/objects/Trial_Data__c/fields/Approved_for_Production__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_Production__c</fullName>
    <label>Approved for Production</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>