force-app/main/default/objects/Trial_Data__c/fields/Baffle_Description__c.field-meta.xml
<CustomField>
    <fullName>Baffle_Description__c</fullName>
    <label>Baffle Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>