force-app/main/default/objects/Trial_Data__c/fields/Baffle_Set_Letter__c.field-meta.xml
<CustomField>
    <fullName>Baffle_Set_Letter__c</fullName>
    <label>Baffle Set Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>