force-app/main/default/objects/Trial_Data__c/fields/Balance_Mould_Equipment_delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Balance_Mould_Equipment_delivery_Date__c</fullName>
    <label>Balance Mould Equipment delivery Date</label>
    <type>Date</type>
</CustomField>