force-app/main/default/objects/Trial_Data__c/fields/Blank_Description__c.field-meta.xml
<CustomField>
    <fullName>Blank_Description__c</fullName>
    <label>Blank Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>