force-app/main/default/objects/Trial_Data__c/fields/Blank_Set_Letter__c.field-meta.xml
<CustomField>
    <fullName>Blank_Set_Letter__c</fullName>
    <label>Blank Set Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>