force-app/main/default/objects/Trial_Data__c/fields/Blowhead__c.field-meta.xml
<CustomField>
    <fullName>Blowhead__c</fullName>
    <label>Blowhead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>