force-app/main/default/objects/Trial_Data__c/fields/Bottom_Description__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Description__c</fullName>
    <label>Bottom Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>