force-app/main/default/objects/Trial_Data__c/fields/Bottom_Set_Letter__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Set_Letter__c</fullName>
    <label>Bottom Set Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>