force-app/main/default/objects/Trial_Data__c/fields/Bulk_Glass_Production_Date_2nd_Run__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Glass_Production_Date_2nd_Run__c</fullName>
    <description>Bulk Glass Production Date 2nd Run</description>
    <label>Bulk Glass Production Date 2nd Run</label>
    <type>Date</type>
</CustomField>