force-app/main/default/objects/Trial_Data__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity (ml)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>