force-app/main/default/objects/Trial_Data__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Trial_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>