force-app/main/default/objects/Trial_Data__c/fields/Customer_Approval_of_Trial_Glass__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approval_of_Trial_Glass__c</fullName>
    <label>Customer Approval of Trial Glass</label>
    <type>Date</type>
</CustomField>