force-app/main/default/objects/Trial_Data__c/fields/Customer_Trial_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Trial_Feedback__c</fullName>
    <label>Customer Trial Feedback</label>
    <type>TextArea</type>
</CustomField>