force-app/main/default/objects/Trial_Data__c/fields/D_Plate_Description__c.field-meta.xml
<CustomField>
    <fullName>D_Plate_Description__c</fullName>
    <label>D Plate Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>