force-app/main/default/objects/Trial_Data__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of MPA Approval</label>
    <type>Date</type>
</CustomField>