force-app/main/default/objects/Trial_Data__c/fields/Date_Customer_is_running_trial_glass__c.field-meta.xml
<CustomField>
    <fullName>Date_Customer_is_running_trial_glass__c</fullName>
    <description>New field case 6446</description>
    <label>Date Customer is running trial glass</label>
    <type>Date</type>
</CustomField>