force-app/main/default/objects/Trial_Data__c/fields/Date_Drawing_Approved_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Drawing_Approved_By_Customer__c</fullName>
    <description>Related MPA Created Date</description>
    <formula>MPA__r.CreatedDate</formula>
    <inlineHelpText>Related MPA Created Date</inlineHelpText>
    <label>Date Drawing Approved By Customer</label>
    <type>Date</type>
</CustomField>