force-app/main/default/objects/Trial_Data__c/fields/Date_of_Approval_of_MPA__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Approval_of_MPA__c</fullName>
    <label>Date of Approval of MPA</label>
    <type>Date</type>
</CustomField>