force-app/main/default/objects/Trial_Data__c/fields/Date_Samples_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Samples_Sent_to_Customer__c</fullName>
    <label>Date Samples Sent to Customer</label>
    <type>Date</type>
</CustomField>