force-app/main/default/objects/Trial_Data__c/fields/Did_The_Trial_Take_Place__c.field-meta.xml
<CustomField>
    <fullName>Did_The_Trial_Take_Place__c</fullName>
    <label>Did The Trial Take Place?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>