force-app/main/default/objects/Trial_Data__c/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Trial Data</relationshipLabel>
    <relationshipName>Trial_Data</relationshipName>
    <type>Lookup</type>
</CustomField>