force-app/main/default/objects/Trial_Data__c/fields/Equip_Order_to_Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Equip_Order_to_Trial_Date__c</fullName>
    <description>What is the difference between Trial Equipment delivery date and the Trial Date</description>
    <formula>Trial_Date__c - Trial_Mould_Equipment_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equip Order to Trial Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>