force-app/main/default/objects/Trial_Data__c/fields/Existing_Job_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Existing_Job_Production_Date__c</fullName>
    <inlineHelpText>Enter the date the job is scheduled for production</inlineHelpText>
    <label>Existing Job Production Date</label>
    <type>Date</type>
</CustomField>