force-app/main/default/objects/Trial_Data__c/fields/External_Testing_Details__c.field-meta.xml
<CustomField>
    <fullName>External_Testing_Details__c</fullName>
    <label>External Testing Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>