force-app/main/default/objects/Trial_Data__c/fields/Full_Production_Required__c.field-meta.xml
<CustomField>
    <fullName>Full_Production_Required__c</fullName>
    <label>Full Production Required</label>
    <type>Date</type>
</CustomField>