force-app/main/default/objects/Trial_Data__c/fields/Funnel_Description__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Description__c</fullName>
    <label>Funnel Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>