force-app/main/default/objects/Trial_Data__c/fields/Funnel_Set_Letter__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Set_Letter__c</fullName>
    <label>Funnel Set Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>