force-app/main/default/objects/Trial_Data__c/fields/Glass_To_Be_Sent_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Glass_To_Be_Sent_To_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Glass To Be Sent To Customer</label>
    <type>Checkbox</type>
</CustomField>