force-app/main/default/objects/Trial_Data__c/fields/Guide_Plate__c.field-meta.xml
<CustomField>
    <fullName>Guide_Plate__c</fullName>
    <label>Guide Plate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>