force-app/main/default/objects/Trial_Data__c/fields/Internal_Reviewed_Approved_for_Supply__c.field-meta.xml
<CustomField>
    <fullName>Internal_Reviewed_Approved_for_Supply__c</fullName>
    <label>Internal Reviewed &amp; Approved for Supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>