force-app/main/default/objects/Trial_Data__c/fields/Is_External_Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_External_Testing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Testing Required?</label>
    <type>Checkbox</type>
</CustomField>