force-app/main/default/objects/Trial_Data__c/fields/Job_Approved_By_Plant__c.field-meta.xml
<CustomField>
    <fullName>Job_Approved_By_Plant__c</fullName>
    <label>Job Approved By Plant</label>
    <type>Date</type>
</CustomField>