force-app/main/default/objects/Trial_Data__c/fields/Line_Requires_Squeeze_Tester__c.field-meta.xml
<CustomField>
    <fullName>Line_Requires_Squeeze_Tester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Requires Squeeze Tester</label>
    <type>Checkbox</type>
</CustomField>