force-app/main/default/objects/Trial_Data__c/fields/Mould_Description__c.field-meta.xml
<CustomField>
    <fullName>Mould_Description__c</fullName>
    <label>Mould Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>