force-app/main/default/objects/Trial_Data__c/fields/Mould_Set_Letter__c.field-meta.xml
<CustomField>
    <fullName>Mould_Set_Letter__c</fullName>
    <label>Mould Set Letter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>