force-app/main/default/objects/Trial_Data__c/fields/MPA__c.field-meta.xml
<CustomField>
    <fullName>MPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MPA</label>
    <referenceTo>MPA__c</referenceTo>
    <relationshipName>Trial_Data</relationshipName>
    <type>Lookup</type>
</CustomField>