force-app/main/default/objects/Trial_Data__c/fields/Neck_Ring__c.field-meta.xml
<CustomField>
    <fullName>Neck_Ring__c</fullName>
    <label>Neck Ring</label>
    <length>255</length>
    <type>Text</type>
</CustomField>