force-app/main/default/objects/Trial_Data__c/fields/Number_of_samples_sent_to_customer__c.field-meta.xml
<CustomField>
    <fullName>Number_of_samples_sent_to_customer__c</fullName>
    <label>Number of samples sent to customer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>