force-app/main/default/objects/Trial_Data__c/fields/Number_of_Trial_Samples_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Trial_Samples_Required__c</fullName>
    <label>Number of Trial Samples Required</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>