force-app/main/default/objects/Trial_Data__c/fields/Plunger_Plug_Description__c.field-meta.xml
<CustomField>
    <fullName>Plunger_Plug_Description__c</fullName>
    <label>Plunger/Plug Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>