force-app/main/default/objects/Trial_Data__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>NNPB</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>