force-app/main/default/objects/Trial_Data__c/fields/Production_Line_Used_for_Trial__c.field-meta.xml
<CustomField>
    <fullName>Production_Line_Used_for_Trial__c</fullName>
    <label>Production Line Used for Trial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Trial_Equipment_Plant__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DL11</fullName>
            </value>
            <value>
                <fullName>DL12</fullName>
            </value>
            <value>
                <fullName>DL13</fullName>
            </value>
            <value>
                <fullName>DL14</fullName>
            </value>
            <value>
                <fullName>DL21</fullName>
            </value>
            <value>
                <fullName>DL22</fullName>
            </value>
            <value>
                <fullName>DL23</fullName>
            </value>
            <value>
                <fullName>DL24</fullName>
            </value>
            <value>
                <fullName>EL11</fullName>
            </value>
            <value>
                <fullName>EL12</fullName>
            </value>
            <value>
                <fullName>EL13</fullName>
            </value>
            <value>
                <fullName>EL14</fullName>
            </value>
            <value>
                <fullName>EL15</fullName>
            </value>
            <value>
                <fullName>EL16</fullName>
            </value>
            <value>
                <fullName>EL17</fullName>
            </value>
            <value>
                <fullName>EL21</fullName>
            </value>
            <value>
                <fullName>EL22</fullName>
            </value>
            <value>
                <fullName>EL23</fullName>
            </value>
            <value>
                <fullName>EL24</fullName>
            </value>
            <value>
                <fullName>EL25</fullName>
            </value>
            <value>
                <fullName>EL26</fullName>
            </value>
            <value>
                <fullName>EL27</fullName>
            </value>
            <value>
                <fullName>CR11</fullName>
            </value>
            <value>
                <fullName>CR12</fullName>
            </value>
            <value>
                <fullName>CR21</fullName>
            </value>
            <value>
                <fullName>CR22</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>