force-app/main/default/objects/Trial_Data__c/fields/Production_tool_order_date__c.field-meta.xml
<CustomField>
    <fullName>Production_tool_order_date__c</fullName>
    <description>To see if a date has been selected for the production tooling ordered field</description>
    <formula>IF(ISBLANK(Production_Tooling_Ordered__c),&quot;No Date&quot;, &quot;Has Date&quot;)</formula>
    <label>Production tool order date</label>
    <type>Text</type>
</CustomField>