force-app/main/default/objects/Trial_Data__c/fields/Production_Tooling_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Production_Tooling_Ordered__c</fullName>
    <label>Production Tooling Ordered</label>
    <type>Date</type>
</CustomField>