force-app/main/default/objects/Trial_Data__c/fields/Proposed_First_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_First_Production_Date__c</fullName>
    <description>Proposed Production Date For First Short Run / Extended Trial (2 Days)</description>
    <inlineHelpText>Proposed Production Date For First Short Run / Extended Trial (2 Days)</inlineHelpText>
    <label>Proposed Production Date 1st Short Run*</label>
    <type>Date</type>
</CustomField>