force-app/main/default/objects/Trial_Data__c/fields/Proposed_First_Production_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Proposed_First_Production_Quantity__c</fullName>
    <label>Proposed First Production Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>