force-app/main/default/objects/Trial_Data__c/fields/Required_Volume_Tol__c.field-meta.xml
<CustomField>
    <fullName>Required_Volume_Tol__c</fullName>
    <label>Required Volume (Tol)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>