force-app/main/default/objects/Trial_Data__c/fields/Results_of_Trial_Report_Meeting_Review__c.field-meta.xml
<CustomField>
    <fullName>Results_of_Trial_Report_Meeting_Review__c</fullName>
    <label>Results of Trial Report Meeting Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Further Testing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>