force-app/main/default/objects/Trial_Data__c/fields/Running_First_Short_Run_Ext_triall_glass__c.field-meta.xml
<CustomField>
    <fullName>Running_First_Short_Run_Ext_triall_glass__c</fullName>
    <description>Date Customer Running First Short Run / Extended Trial Glass</description>
    <inlineHelpText>Date Customer Running First Short Run / Extended Trial Glass</inlineHelpText>
    <label>Date Customer Running First Short Run*</label>
    <type>Date</type>
</CustomField>