force-app/main/default/objects/Trial_Data__c/fields/Sample_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Sample_Purpose__c</fullName>
    <label>Sample Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filling</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Visual Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>