force-app/main/default/objects/Trial_Data__c/fields/Sample_Tracking_Information__c.field-meta.xml
<CustomField>
    <fullName>Sample_Tracking_Information__c</fullName>
    <label>Sample Tracking Information</label>
    <type>TextArea</type>
</CustomField>