force-app/main/default/objects/Trial_Data__c/fields/Samples_Available_For_Customer__c.field-meta.xml
<CustomField>
    <fullName>Samples_Available_For_Customer__c</fullName>
    <label>Samples Available For Customer</label>
    <type>Date</type>
</CustomField>