force-app/main/default/objects/Trial_Data__c/fields/Site_of_First_Production__c.field-meta.xml
<CustomField>
    <fullName>Site_of_First_Production__c</fullName>
    <label>Site of First Production</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Derrylin</fullName>
            </value>
            <value>
                <fullName>Corsico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>