force-app/main/default/objects/Trial_Data__c/fields/System_MPA__c.field-meta.xml
<CustomField>
    <fullName>System_MPA__c</fullName>
    <label>System MPA Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>