force-app/main/default/objects/Trial_Data__c/fields/T_O_Tong_Description__c.field-meta.xml
<CustomField>
    <fullName>T_O_Tong_Description__c</fullName>
    <label>T/O Tong Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>