force-app/main/default/objects/Trial_Data__c/fields/Thimble_Description__c.field-meta.xml
<CustomField>
    <fullName>Thimble_Description__c</fullName>
    <label>Thimble Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>