force-app/main/default/objects/Trial_Data__c/fields/Trial_Equipment_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Trial_Equipment_Ordered__c</fullName>
    <label>Trial Equipment Ordered</label>
    <type>Date</type>
</CustomField>