force-app/main/default/objects/Trial_Data__c/fields/Trial_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Meeting_Date__c</fullName>
    <label>Trial Meeting Date</label>
    <type>Date</type>
</CustomField>