force-app/main/default/objects/Trial_Data__c/fields/Trial_Mould_Equipment_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Mould_Equipment_Delivery_Date__c</fullName>
    <label>Trial Mould Equipment Delivery Date</label>
    <type>Date</type>
</CustomField>