force-app/main/default/objects/Trial_Data__c/fields/Trial_Stage__c.field-meta.xml
<CustomField>
    <fullName>Trial_Stage__c</fullName>
    <label>Trial Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Progressing</fullName>
            </value>
            <value>
                <fullName>Re Trial</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
                <isActive>false</isActive>
                <label>Aborted</label>
            </value>
            <value>
                <fullName>Trial</fullName>
                <isActive>false</isActive>
                <label>Trial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>