force-app/main/default/objects/Trial_Data__c/fields/Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>Trial_Type__c</fullName>
    <label>Trial Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Trial</fullName>
            </value>
            <value>
                <fullName>Internal Trial</fullName>
            </value>
            <value>
                <fullName>Customer Retrial</fullName>
            </value>
            <value>
                <fullName>Alternative Set-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>