force-app/main/default/objects/Trial_Data__c/fields/Type_of_Testing_Required__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Testing_Required__c</fullName>
    <label>Type of Testing Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Report</fullName>
            </value>
            <value>
                <fullName>Visual Only</fullName>
            </value>
            <value>
                <fullName>Full &amp; External Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>