force-app/main/default/objects/Trial_Data__c/fields/Weight_gram__c.field-meta.xml
<CustomField>
    <fullName>Weight_gram__c</fullName>
    <label>Weight (gram)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>