force-app/main/default/objects/Trial_Data__c/fields/When_Are_The_Containers_Required__c.field-meta.xml
<CustomField>
    <fullName>When_Are_The_Containers_Required__c</fullName>
    <label>When Are The Containers Required</label>
    <type>Date</type>
</CustomField>