force-app/main/default/objects/Trial_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mould_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>MPA__c</columns>
    <columns>Trial_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>