force-app/main/default/objects/Trial_Data__c/listViews/Completed_Trials.listView-meta.xml
<ListView>
    <fullName>Completed_Trials</fullName>
    <columns>NAME</columns>
    <columns>Mould_Number__c</columns>
    <columns>Customer__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>MPA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trial_Stage__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Completed Trials</label>
</ListView>